test/elaboration/good/typeclass_predicate_annotations_priority.mle
class H 'a { h : 'a -> int }
class H 'a => J 'a { i : 'a -> unit }
let ['a] [ H 'a ] (f : 'a -> int) = ['a] fun (x : 'a) -> h['a] x[]