test/elaboration/bad/typeclass_local_let_bound_and_overload.mle
let (x : int) = let (h : int) = 42 in h[]
class H 'a { h : 'a -> int }
